# Gezzy

./: .gitmodules  CMakeLists.txt
include/gezzy/: window.hpp
src/: input.cpp  window.cpp
